--- a/view/aproposwindow.ui
+++ b/view/aproposwindow.ui
@@ -24,7 +24,7 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="btnRetour">
       <property name="text">
        <string>Retour</string>
       </property>
@@ -43,7 +43,7 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QLabel" name="label">
+     <widget class="QLabel" name="photo">
       <property name="text">
        <string/>
       </property>
