--- a/view/loginwindow.ui
+++ b/view/loginwindow.ui
@@ -87,6 +87,11 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QLabel" name="label_3">
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
       <property name="text">
        <string>Bienvenue à la page de connexion</string>
       </property>
