--- a/view/patientwindow.ui
+++ b/view/patientwindow.ui
@@ -343,7 +343,7 @@
      <widget class="QListWidget" name="listPersonnelSoins">
       <item>
        <property name="text">
-        <string>Liste Personnel de soins</string>
+        <string>Liste Personnel de soins :</string>
        </property>
       </item>
      </widget>
