--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -10,6 +10,9 @@
     <height>471</height>
    </rect>
   </property>
+  <property name="contextMenuPolicy">
+   <enum>Qt::DefaultContextMenu</enum>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
