--- a/view/loginwindow.ui
+++ b/view/loginwindow.ui
@@ -45,7 +45,11 @@
      </widget>
     </item>
     <item row="0" column="2">
-     <widget class="QLineEdit" name="Login"/>
+     <widget class="QLineEdit" name="Login">
+      <property name="inputMethodHints">
+       <set>Qt::ImhNone</set>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
