--- a/view/mainwindow.ui
+++ b/view/mainwindow.ui
@@ -26,6 +26,12 @@
       <height>351</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
@@ -291,8 +297,8 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="../icon_nurse.qrc"/>
   <include location="../icon_patient.qrc"/>
+  <include location="../icon_nurse.qrc"/>
  </resources>
  <connections/>
 </ui>
